# Scribeval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_FLOW.md  LICENSE  METHODOLOGY.md  PUBLIC_RELEASE.md  README.md  REPOSITORY_INDEX.md  ROADMAP.md  SECURITY.md  pyproject.toml  repo.index.json
frontend/: README.md  app.js  demo-data.json  index.html  styles.css
rubrics/: ahpra.yaml  hallucination.yaml  medication_terminology.yaml  medicolegal.yaml  omission.yaml  pdqi9.yaml  qnote.yaml
samples/: README.md  benchmark_manifest.json
scripts/: assess_validation_claim_readiness.py  audit_clinician_review_readiness.py  audit_validation_evidence_runs.py  build_adjudication_packets.py  build_consensus_validation_ratings.py  build_reviewer_assignments.py  build_reviewer_packets.py  build_synthetic_evidence_bundle.py  build_validation_evidence_bundle.py  export_validation_judge_scores.py  import_adjudication_decisions.py  import_validation_ratings.py  index_validation_evidence_runs.py  plan_reviewer_recruitment.py  plan_validation_collection.py  public_release_audit.py  summarize_adjudication_burden.py  summarize_reviewer_reliability.py  summarize_validation_evidence.py  summarize_validation_goal_status.py  summarize_validation_review_run.py  validation_pack_audit.py
tests/: conftest.py  test_asr_noise.py  test_calibration.py  test_cli.py  test_compare.py  test_ensemble_and_human_judges.py  test_error_injection.py  test_medication_terminology.py  test_models.py  test_multi_run.py  test_pipeline.py  test_profiling.py  test_reproducibility.py  test_rubrics.py  (+3 more)
(+153 files in other folders)
